<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_banner"
        app:srcCompat="@mipmap/ic_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_people"
            android:drawableStart="@drawable/ic_people"
            android:drawablePadding="@dimen/sp_14"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/sp_14"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/shape"
            android:onClick="login"
            android:text="@string/action_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/action_forget_pwd"
                android:textColor="@color/colorPrimaryOverlay"
                android:focusable="true"
                android:clickable="true"
                android:onClick="updatePwd" />

            <View
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/action_register"
                android:textColor="@color/colorPrimaryOverlay"
                android:focusable="true"
                android:clickable="true"
                android:onClick="register"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>