<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp" >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@null"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="7dp"
            android:lines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:padding="7dp"
            android:lines="1"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/hint_new_pwd"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="7dp"
            android:lines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc" />

        <EditText
            android:id="@+id/do_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:hint="@string/hint_do_pwd"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:padding="7dp"
            android:lines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dcdcdc" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="goUpdatePwd"
            android:text="@string/action_pwd_modify" />
    </LinearLayout>

</LinearLayout>