<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:hint="@string/hint_title"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/feed_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/hint_word"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="3dp"
            android:maxHeight="350dp"
            android:maxLength="240"
            android:minHeight="220dp"
            android:padding="7dp"
            android:scrollHorizontally="false"/>

        <!--android:elevation="0dp"-->
        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:padding="6dp"/>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:padding="6dp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nav_item_bg"
            android:onClick="addPic"
            android:padding="8dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_camera"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:background="@drawable/shape"
            android:onClick="submit"
            android:text="@string/submit"/>


    </LinearLayout>

</FrameLayout>